--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>基本資料</h1>
         <p>Email:不想打</p>
         <p>age:15</p>
-        <p>discord ID:一個路過的人#3583</p>
+        <p>discord ID:一個路過的人#3583/3333333333</p>
     </div>
     <div>1323213213</div>
 
